# marmosyn

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: main.rs
src/api/: auth.rs  mod.rs  models.rs
src/api/handlers/: config.rs  health.rs  jobs.rs  mod.rs  receiver.rs  remotes.rs  status.rs
src/cli/: api_client.rs  config_cmd.rs  jobs.rs  log_cmd.rs  login.rs  mod.rs  remotes.rs  server.rs  status.rs  sync_cmd.rs  version.rs
src/config/: dest_parser.rs  loader.rs  mod.rs  paths.rs  types.rs  validation.rs
src/core/: dest_router.rs  diff.rs  excluder.rs  executor.rs  file_tree.rs  hasher.rs  mod.rs  remote_executor.rs  safety.rs  scanner.rs  sync_plan.rs
src/credentials/: encrypt.rs  mod.rs  resolve.rs  store.rs
src/crypto/: cipher.rs  key.rs  mod.rs
src/db/: file_meta.rs  history.rs  migrations.rs  mod.rs  receiver_stats.rs
src/server/: daemon.rs  job_manager.rs  mod.rs  scheduler.rs  watcher.rs
src/transport/: client.rs  codec.rs  delta.rs  mod.rs  protocol.rs  receiver.rs  server.rs  tls.rs
src/web/: mod.rs
tests/fixtures/: test_cert.pem  test_key.pem
web/: index.html
